# nba-proj

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: flags.yaml  providers.yaml
data/mappings/: name_map.csv
data/odds/: closing_2025-10-27.csv
data/parquet/odds_user/: odds_2025-10-27.csv  odds_2025-10-28.csv
docs/: METHODOLOGY.md  api.md  configuration.md  model_card.md
docs/adr/: 0001-gamma-poisson.md
scripts/: diag.ps1  etl.ps1  pricing.ps1  priors.ps1  run_day.ps1  simulate.ps1
src/api/: app.py  main.py
src/core/: clv.py  evals.py  odds.py  pricing.py  priors.py  simulator.py
src/etl/: fetch_daily.py  ingest_boxscores.py
src/etl/providers/: base.py  bref_boxscores.py  csv_provider.py  html_table.py  json_api.py
src/metrics/: calibration_bins.py
src/model/: priors.py  simulator.py
src/nba_proj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: io.py
tests/: test_pricing_rationale.py  test_priors.py  test_role_priors.py  test_role_priors_integration.py  test_simulator_role_effect.py
