[project]
name = "nba-proj"
version = "0.1.0"
description = "NBA Betting Projection Engine (minutes-first, explainable)"
requires-python = ">=3.10"
authors = [{name = "Tyler", email = "tyler@example.com"}]
readme = "README.md"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "scipy>=1.11",
    "pytest>=8.2"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
